--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="wrapper__content">
+            <section class="hero">
+                <div class="container">
+                    <header class="header">
+                        <a href="#" class="logo">
+                            <img src="./img/content/logo.png" alt="logo" class="logo__item">
+                        </a>
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__item"><a href="#">О нас</a></li>
+                                <li class="menu__item"><a href="#">Наушники</a></li>
+                                <li class="menu__item"><a href="#">Команда</a></li>
+                                <li class="menu__item"><a href="#">Цвета</a></li>
+                                <li class="menu__item"><a href="#">Отзывы</a></li>
+                                <li class="menu__item"><a href="#">Как мы работаем</a></li>
+                                <li class="menu__item"><a href="#">Контакты</a></li>
+                            </ul>
+                        </nav>
+                        <address class="contact">
+                            <a href="#" class="contact__item">8 800 903 90 90</a>
+                        </address>
+                    </header>
+                </div>
+                <section class="main-screen">
+                    <h1 class="main-screen__title">
+                        Беспроводные 
+                        наушники 
+                        Beats Solo 3
+                    </h1>
+                    <div class="main-screen__subtitle">
+                        Встречайте новую версию наушников 
+                        из линейки Powerbeats.
+                    </div>
+                    <div class="main-screen__order">
+                        <a href="#" class="button">Заказать</a>
+                    </div>
+                </section>
+            </section>
+        </div>
+        <div class="footer-container">
+
+        </div>
+    </div>
 </body>
 </html>
