--- a/index.html
+++ b/index.html
@@ -28,24 +28,52 @@
                             </ul>
                         </nav>
                         <address class="contact">
-                            <a href="#" class="contact__item">8 800 903 90 90</a>
+                            <a href="tel:88009039090" class="contact__item">
+                                <div class="contact__icon">
+                                    <img src="./img/icons/phone.png" alt="phone" class="contact__icon">
+                                </div>
+                                8 800 903 90 90</a>
                         </address>
                     </header>
+                    <section class="main-screen">
+                        <div class="main-screen__content">
+                            <h1 class="main-screen__title">
+                                Беспроводные 
+                                наушники 
+                                Beats Solo 3
+                            </h1>
+                            <div class="main-screen__subtitle">
+                                Встречайте новую версию наушников 
+                                из линейки Powerbeats.
+                            </div>
+                            <div class="main-screen__order">
+                                <a href="#" class="button">Заказать</a>
+                            </div>
+                            <div class="specs">
+                                <ul class="specs__list">
+                                    <li class="specs__item">
+                                        <div class="specs__icon"><img src="./img/icons/noise.png" alt="" class="specs__icon-item"></div>
+                                        <div class="specs__text">
+                                            <p>Безупречный звук</p>
+                                        </div>
+                                    </li>
+                                    <li class="specs__item">
+                                        <div class="specs__icon"><img src="./img/icons/battery.png" alt="" class="specs__icon-item"></div>
+                                        <div class="specs__text">
+                                        <p>До 40 часов работы</p>
+                                        </div>
+                                    </li>
+                                    <li class="specs__item">
+                                        <div class="specs__icon"><img src="./img/icons/plug.png" alt="" class="specs__icon-item"></div>
+                                        <div class="specs__text">
+                                        <p>Технология Fast Fuel</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </secction>
                 </div>
-                <section class="main-screen">
-                    <h1 class="main-screen__title">
-                        Беспроводные 
-                        наушники 
-                        Beats Solo 3
-                    </h1>
-                    <div class="main-screen__subtitle">
-                        Встречайте новую версию наушников 
-                        из линейки Powerbeats.
-                    </div>
-                    <div class="main-screen__order">
-                        <a href="#" class="button">Заказать</a>
-                    </div>
-                </section>
             </section>
         </div>
         <div class="footer-container">
