--- a/index.html
+++ b/index.html
@@ -75,6 +75,55 @@
                     </secction>
                 </div>
             </section>
+            <section class="reasons">
+                <div class="container reasons--container">
+                    <div class="reasons__main">
+                        <h2 class="reasons__main-title">почему beats solo 3?</h2>
+                        <div class="reasons__main-subtitle">
+                            Процессор W1 работает невероятно эффективно и позволяет легко 
+                            подключать наушники к различным устройствам Apple.
+                        </div>
+                    </div>
+                    <div class="reasons__blocks">
+                        <ul class="reasons__list">
+                            <li class="reasons__item">
+                                <div class="reasons__pic">
+                                    <img src="./img/icons/battery-second.png" alt="" class="reasons__pic-item">
+                                </div>
+                                <h3 class="reasons__title">40 часов работы</h3>
+                                <div class="reasons__subtitle">
+                                    <p>Наушники Beats Solo3 могут работать 
+                                    до 40 часов без подзарядки, чтобы вы 
+                                    могли пользоваться ими каждый день.</p>
+                                </div>
+                            </li>
+                            <li class="reasons__item">
+                                <div class="reasons__pic">
+                                    <img src="./img/icons/sound.png" alt="" class="reasons__pic-item">
+                                </div>
+                                <h3 class="reasons__title">Фирменное звучание</h3>
+                                <div class="reasons__subtitle">
+                                    <p>Фирменное звучание Beats в наушниках 
+                                    с технологией Bluetooth класса 
+                                    1 будет сопровождать вас повсюду — 
+                                    куда бы вы ни отправились.</p>
+                                </div>
+                            </li>
+                            <li class="reasons__item">
+                                <div class="reasons__pic">
+                                    <img src="./img/icons/time.png" alt="" class="reasons__pic-item">
+                                </div>
+                                <h3 class="reasons__title">Быстрая зарядка</h3>
+                                <div class="reasons__subtitle">
+                                   <p> Благодаря технологии Fast Fuel 
+                                    всего через 5 минут зарядки вы 
+                                    сможете слушать музыку ещё 3 часа.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </div>
         <div class="footer-container">
 
