--- a/index.html
+++ b/index.html
@@ -71,7 +71,82 @@
                     </div>
                 </div>
             </section>
-            <div class="long" style="height: 600px; background-color:blue;"></div>
+            <section class="section benefits-section">
+                <div class="container">
+                    <div class="headline">
+                        <h2 class="section__title headline__title">почему beats solo 3?</h2>
+                        <div class="headline__subtitle">
+                            Процессор W1 работает невероятно эффективно и позволяет легко 
+                            подключать наушники к различным устройствам Apple.
+                        </div>
+                    </div>
+                    <ul class="benefits">
+                        <li class="benefits__item benefit">
+                            <div class="benefit__image">
+                                <div class="benefit__image-wrapper">
+                                    <img src="./img/icons/battery.svg" alt="battery" class="benefit__icon">
+                                </div>
+                            </div>
+                            <div class="benefit__text">
+                                <h3 class="benefit__title">40 часов работы</h3>
+                                <div class="benefit__desc">
+                                    <p>Наушники Beats Solo3 могут работать 
+                                    до 40 часов без подзарядки, чтобы вы 
+                                    могли пользоваться ими каждый день.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="benefits__item benefit">
+                            <div class="benefit__image">
+                                <div class="benefit__image-wrapper">
+                                    <img src="./img/icons/sound.svg" alt="sound" class="benefit__icon">
+                                </div>
+                            </div>
+                            <div class="benefit__text">
+                                <h3 class="benefit__title">Фирменное звучание</h3>
+                                <div class="benefit__desc">
+                                    <p>Фирменное звучание Beats в наушниках 
+                                        с технологией Bluetooth класса 
+                                        1 будет сопровождать вас повсюду — 
+                                        куда бы вы ни отправились.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="benefits__item benefit">
+                            <div class="benefit__image">
+                                <div class="benefit__image-wrapper">
+                                    <img src="./img/icons/time.svg" alt="time" class="benefit__icon">
+                                </div>
+                            </div>
+                            <div class="benefit__text">
+                                <h3 class="benefit__title">Быстрая зарядка</h3>
+                                <div class="benefit__desc">
+                                    <p>Благодаря технологии Fast Fuel 
+                                        всего через 5 минут зарядки вы 
+                                        сможете слушать музыку ещё 3 часа.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <h2 class="section__title">Отзывы</h2>
+                    <div class="reviews">
+                        <div class="reviews__display"></div>
+                        <ul class="reviews__switcher">
+                            <li class="reviews__switcher-item interactive-avatar">
+                                <a href="" class="interactive-avatar__link">
+                                    <img src="" alt="" class="interactive-avatar__img">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </div>
         <div class="footer-container">
 
