--- a/index.html
+++ b/index.html
@@ -132,25 +132,139 @@
                     </ul>
                 </div>
             </section>
-            <section class="section">
+            <section class="section reviews-section">
                 <div class="container">
                     <h2 class="section__title">Отзывы</h2>
                     <div class="reviews">
-                        <div class="reviews__display"></div>
+                        <div class="reviews__display">
+                            <div class="reviews__display-item">
+                                <div class="reviews__avatar">
+                                    <img src="./img/content/billie.jpg" alt="billie" class="reviews__avatar-img">
+                                </div>
+                                <article class="reviews__content">
+                                    <h3 class="reviews__title">Отличный звук</h3>
+                                    <div class="reviews__text">
+                                        <p>
+                                            Я ем малыми порциями, но часто. Это повышает мою продуктивность в разы. 
+                                            В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто 
+                                            не могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно. 
+                                        </p>
+                                    </div>
+                                    <div class="reviews__author">
+                                        Билли Айлиш
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
                         <ul class="reviews__switcher">
+                            <li class="reviews__switcher-item interactive-avatar interactive-avatar--active">
+                                <a href="" class="interactive-avatar__link">
+                                    <img src="./img/content/billie.jpg" alt="billie" class="interactive-avatar__img">
+                                </a>
+                            </li>
                             <li class="reviews__switcher-item interactive-avatar">
                                 <a href="" class="interactive-avatar__link">
-                                    <img src="" alt="" class="interactive-avatar__img">
+                                    <img src="./img/content/woman.jpg" alt="woman" class="interactive-avatar__img">
+                                </a>
+                            </li>
+                            <li class="reviews__switcher-item interactive-avatar">
+                                <a href="" class="interactive-avatar__link">
+                                    <img src="./img/content/man.jpg" alt="man" class="interactive-avatar__img">
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </section>
+            <section class="section order-section section--font--color--white">
+                <div class="container">
+                    <div class="section__title order__title">Закажите доставку</div>
+                    <form class="form">
+                        <div class="form__col">
+                            <div class="form__row">
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Телефон</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                            </div>
+                            <div class="form__row">
+                                <label class="form__block">
+                                    <div class="form__title">Улица</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                            </div>
+                            <div class="form__row">
+                                <label class="form__block">
+                                    <div class="form__title">Дом</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Корпус</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Квартира</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Этаж</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form__col">
+                            <div class="form__row form__row--textarea">
+                                <label class="form__block">
+                                    <div class="form__title">Комментарий</div>
+                                    <textarea class="form__input form__input--textarea"></textarea>
+                                </label>
+                            </div>
+                            <div class="form__controls">
+                                <label class="radio">
+                                    <input type="radio" name="option" class="radio__item">
+                                    <div class="radio__visible"></div>
+                                    <div class="radio__title">Потребуется сдача</div>
+                                </label>
+                                <label class="radio">
+                                    <input type="radio" name="option" class="radio__item">
+                                    <div class="radio__visible"></div>
+                                    <div class="radio__title">Оплата по карте</div>
+                                </label>
+                            </div>
+                            <div class="form__controls">
+                                <label class="radio radio--checkbox">
+                                    <input type="checkbox" class="radio__item">
+                                    <div class="radio__visible"></div>
+                                    <div class="radio__title">Не перезванивать</div>
+                                </label>
+                            </div>
+                            <div class="form__buttons">
+                                <input type="submit" value="Заказать" class="button">
+                                <input type="reset" value="Очистить" class="button button--theme--transparent">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </section>
+            <nav class="fixed-menu">
+                <ul class="fixed-menu__list">
+                    <li class="fixed-menu__item fixed-menu__item--active"><a href="#" class="fixed-menu__link"></a></li>
+                    <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+                    <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+                    <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+                    <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+                    <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+                    <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
+                </ul>
+            </nav>
         </div>
         <div class="footer-container">
 
         </div>
-    </div>
+    </>
 </body>
 </html>
