--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Beats</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
