--- a/index.html
+++ b/index.html
@@ -31,16 +31,19 @@
                             <span class="phone__text">8 800 903 90 90</span>
                         </a>
                     </header>
-                    <div class="hero__title-section">
-                        <h1 class="hero__main-title">
-                            Беспроводные 
-                            наушники 
-                            Beats Solo 3
-                        </h1>
-                        <div class="hero__subtitle">Встречайте новую версию наушников 
-                            из линейки Powerbeats.
+                    <div class="hero__title-content">
+                        <div class="hero__title-section">
+                            <h1 class="section__title hero__main-title">
+                                Беспроводные 
+                                наушники 
+                                Beats Solo 3
+                            </h1>
+                            <div class="hero__subtitle">Встречайте новую версию наушников 
+                                из линейки Powerbeats.
+                            </div>
+                            <a href="#" class="button">Заказать</a>
                         </div>
-                        <a href="#" class="button">Заказать</a>
+                        <img src="./img/content/headphones.png" alt="headphones" class="hero__title-img">
                     </div>
                     <div class="hero__icons-section">
                         <ul class="features">
@@ -70,6 +73,7 @@
                             </li>
                         </ul>
                     </div>
+                    
                 </div>
             </section>
             <section class="section benefits-section">
