--- a/index.html
+++ b/index.html
@@ -267,9 +267,12 @@
                 </ul>
             </nav>
         </div>
+        <div class="section map-section">
+            <img src="./img/content/map.png" alt="map" class="map">
+        </div>
         <div class="footer-container">
 
         </div>
-    </>
+    </div>
 </body>
 </html>
