--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             <section class="hero">
                 <div class="container hero__container">
                     <header class="header">
-                        <img src="./img/icons/logo.svg" alt="logo" class="logo">
+                        <a href="#" class="logo">
+                            <svg class="logo__item">
+                                <use xlink:href="./img/icons/sprite.svg#logo"></use>
+                            </svg>
+                        </a>
                         <nav class="menu">
                             <ul class="menu__list">
                                 <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
@@ -43,7 +47,9 @@
                             </div>
                             <a href="#" class="button">Заказать</a>
                         </div>
-                        <img src="./img/content/headphones.png" alt="headphones" class="hero__title-img">
+                        <div class="hero__img">
+                            <img src="./img/content/headphones.png" alt="headphones" class="hero__img-item">
+                        </div>
                     </div>
                     <div class="hero__icons-section">
                         <ul class="features">
@@ -271,7 +277,25 @@
             <img src="./img/content/map.png" alt="map" class="map">
         </div>
         <div class="footer-container">
-
+            <div class="container">
+                <div class="footer">
+                    <address class="contact">
+                        <div class="contact__location">Москва, ул.Новый Арбат, д.31/12</div>
+                        <a href="tel:88009039090" class="phone">
+                            <span class="phone__icon"><img src="./img/icons/phone.png" alt="phone" class="phone__icon-item"></span>
+                            <span class="phone__text">8 800 903 90 90</span>
+                        </a>
+                    </address>
+                    <div class="socials">
+                        <ul class="socials__list">
+                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
+                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
+                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
+                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
