--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                             <span class="phone__icon"><img src="./img/icons/phone.png" alt="phone" class="phone__icon-item"></span>
                             <span class="phone__text">8 800 903 90 90</span>
                         </a>
+                        <a href="#" class="hamburger">
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
+                        </a>
                     </header>
                     <div class="hero__title-content">
                         <div class="hero__title-section">
