--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 <body>
     <div class="wrapper">
         <div class="wrapper__content">
+            <section class="mobile-menu">
+                <div class="container mobile__container">
+                    <div class="mobile-header">
+                        <a href="#" class="logo">
+                            <svg class="logo__item">
+                                <use xlink:href="./img/icons/sprite.svg#logo"></use>
+                            </svg>
+                        </a>
+                        <a href="#" class="hamburger">
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
+                            <span class="hamburger__plank"></span>
+                        </a>
+                    </div>
+                </div>
+            </section>
             <section class="hero">
                 <div class="container hero__container">
                     <header class="header">
@@ -86,7 +102,7 @@
                     </div>
                     
                 </div>
-            </section>
+            </div>
             <section class="section benefits-section">
                 <div class="container">
                     <div class="headline">
