--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <script
+			  src="https://code.jquery.com/jquery-3.5.1.min.js"
+			  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+			  crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -104,7 +108,7 @@
                 </div>
             </div>
             <section class="section benefits-section">
-                <div class="container">
+                <div class="container benefits__container">
                     <div class="headline">
                         <h2 class="section__title headline__title">почему beats solo 3?</h2>
                         <div class="headline__subtitle">
@@ -319,5 +323,6 @@
             </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
