--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                             </ul>
                         </nav>
                         <a href="tel:88009039090" class="phone">
-                            <span class="phone__icon"><img src="./img/icons/phone.png" alt="phone" class="phone__icon-item"></span>
+                            <span class="phone__icon">
+                                <img src="./img/icons/phone.png" alt="phone" class="phone__icon-item">
+                            </span>
                             <span class="phone__text">8 800 903 90 90</span>
                         </a>
                         <a href="#" class="hamburger">
@@ -120,7 +122,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
-                                    <img src="./img/icons/battery.svg" alt="battery" class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="./img/icons/sprite.svg#battery"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -135,7 +139,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
-                                    <img src="./img/icons/sound.svg" alt="sound" class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="./img/icons/sprite.svg#sound"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
@@ -152,7 +158,9 @@
                         <li class="benefits__item benefit">
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
-                                    <img src="./img/icons/time.svg" alt="time" class="benefit__icon">
+                                    <svg class="benefit__icon">
+                                        <use xlink:href="./img/icons/sprite.svg#time"></use>
+                                    </svg>
                                 </div>
                             </div>
                             <div class="benefit__text">
