--- a/index.html
+++ b/index.html
@@ -321,10 +321,34 @@
                     </address>
                     <div class="socials">
                         <ul class="socials__list">
-                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
-                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
-                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
-                            <li class="socials__item"><a href="#" class="socials__item-link"><img src="" alt=""></a></li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__item-link">
+                                    <svg class="socials__icon">
+                                        <use xlink:href="./img/icons/sprite.svg#fb"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__item-link">
+                                    <svg class="socials__icon">
+                                        <use xlink:href="./img/icons/sprite.svg#vk"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__item-link">
+                                    <svg class="socials__icon">
+                                        <use xlink:href="./img/icons/sprite.svg#inst"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="socials__item">
+                                <a href="#" class="socials__item-link">
+                                    <svg class="socials__icon">
+                                        <use xlink:href="./img/icons/sprite.svg#tw"></use>
+                                    </svg>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
