--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">Наушники</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">Команда</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">Цвета</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">Как мы работаем</a></li>
-                            <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Наушники</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Команда</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Цвета</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Как мы работаем</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                         </ul>
                     </nav>
                     <a href="#" class="hamburger">
