--- a/index.html
+++ b/index.html
@@ -158,6 +158,63 @@
                 </ul>
             </div>
         </section>
+        <section class="section product-section">
+            <div class="container product__container">
+                <div class="arrow arrow--left">
+                    <a href="#" class="arrow__link" id="left">
+                        <svg class="arrow__link-item arrow__link-item--left">
+                            <use xlink:href="./img/icons/sprite.svg#arrow"></use>
+                        </svg>
+                    </a>
+                </div>
+                <div class="product">
+                    <div class="product__img">
+                        <img src="./img/content/product_1.png" alt="product" class="product__img-item">
+                    </div>
+                    <div class="product__content">
+                        <div class="specs">
+                            <div class="specs__block">
+                                <svg class="specs__block-item">
+                                    <use xlink:href="./img/icons/sprite.svg#gear"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <h2 class="product__title section__title">
+                            beats solo 3. цвет 
+                            «атласное серебро»
+                        </h2>
+                        <div class="product__subtitle">
+                           <p>
+                                Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.
+                            </p>
+                        </div>
+                        <div class="param">
+                            <ul class="param__list">
+                                <li class="param__item">
+                                    <div class="param__title">Зарядка</div>
+                                    <div class="param__desc">2 часа</div>
+                                </li>
+                                <li class="param__item">
+                                    <div class="param__title">Вес</div>
+                                    <div class="param__desc">215 грамм</div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="product__info">
+                            <div class="product__cost">14 990 ₽</div>
+                            <a class="button">Заказать</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="arrow arrow--right">
+                    <a href="#" class="arrow__img" id="right">
+                        <svg class="arrow__link-item">
+                            <use xlink:href="./img/icons/sprite.svg#arrow"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </section>
         <section class="section reviews-section">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
