--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                         </ul>
                     </nav>
-                    <a href="#" class="hamburger">
+                    <a href="#" class="hamburger" id="hamburger">
                         <span class="hamburger__plank"></span>
                         <span class="hamburger__plank"></span>
                         <span class="hamburger__plank"></span>
@@ -391,5 +391,6 @@
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
         </ul>
     </nav>
+    <script src="js/script.js"></script>
 </body>
 </html>
