RWD menu styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <section class="section hero">
+        <section class="section hero" id="about">
             <div class="container hero__container">
                 <header class="header">
                     <a href="#" class="logo">
@@ -22,13 +22,18 @@
                             <use xlink:href="./img/icons/sprite.svg#logo"></use>
                         </svg>
                     </a>
-                    <nav class="menu">
+                    <nav class="menu menu__mobile">
+                        <a href="#" class="close">
+                            <svg class="close__item">
+                                <use xlink:href="./img/icons/sprite.svg#cross"></use>
+                            </svg>
+                        </a>
                         <ul class="menu__list">
-                            <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
+                            <li class="menu__item"><a href="#about" class="menu__link">О нас</a></li>
                             <li class="menu__item"><a href="#" class="menu__link">Наушники</a></li>
                             <li class="menu__item"><a href="#" class="menu__link">Команда</a></li>
                             <li class="menu__item"><a href="#" class="menu__link">Цвета</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
+                            <li class="menu__item"><a href="#reviews" class="menu__link">Отзывы</a></li>
                             <li class="menu__item"><a href="#" class="menu__link">Как мы работаем</a></li>
                             <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                         </ul>
@@ -91,7 +96,7 @@
                 </div>
             </div>
         </section>
-        <section class="section benefits-section">
+        <section class="section benefits-section" id="benefits">
             <div class="container benefits__container">
                 <div class="headline">
                     <h2 class="section__title headline__title">почему beats solo 3?</h2>
@@ -158,7 +163,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section product-section">
+        <section class="section product-section" id="product">
             <div class="container product__container">
                 <div class="arrow arrow--left">
                     <a href="#" class="arrow__link" id="left">
@@ -215,7 +220,7 @@
                 </div>
             </div>
         </section>
-        <section class="section reviews-section">
+        <section class="section reviews-section" id="reviews">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
                 <div class="reviews">
@@ -259,7 +264,7 @@
                 </div>
             </div>
         </section>
-        <section class="section order-section section--font--color--white">
+        <section class="section order-section section--font--color--white" id="order">
             <div class="container">
                 <div class="section__title order__title">Закажите доставку</div>
                 <form class="form">
@@ -333,7 +338,7 @@
                 </form>
             </div>
         </section>
-        <section class="section map-section">
+        <section class="section map-section" id="map">
             <img src="./img/content/map.png" alt="map" class="map">
             <footer class="footer">
                 <div class="container footer__container">
