--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <use xlink:href="./img/icons/sprite.svg#logo"></use>
                         </svg>
                     </a>
-                    <nav class="menu menu__mobile">
+                    <nav class="menu menu__mobile hidden">
                         <a href="#" class="close">
                             <svg class="close__item">
                                 <use xlink:href="./img/icons/sprite.svg#cross"></use>
