--- a/index.html
+++ b/index.html
@@ -220,6 +220,83 @@
                 </div>
             </div>
         </section>
+        <section class="section team-section">
+            <div class="container team__container">
+                <h2 class="section__title">Команда</h2>
+                <div class="team">
+                    <ul class="team__list">
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/boris.jpg" alt="boris" class="team__img-item">
+                            </div>
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
+                                    Борис Федорович
+                                </a>
+                            </h4>
+                            <div class="team__desc">
+                                <div class="team__app">Главный технолог</div>
+                                <div class="team__subtitle">
+                                    Отвечает за вкусовые 
+                                    качества и калорийность.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/alla.jpg" alt="alla" class="team__img-item">
+                            </div>
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
+                                    Алла Иванова
+                                </a>
+                            </h4>
+                            <div class="team__desc">
+                                <div class="team__app">Специалист по упаковке</div>
+                                <div class="team__subtitle">
+                                    Автор запоминающегося стиля 
+                                    наших батончиков.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/cyril.jpg" alt="cyril" class="team__img-item">
+                            </div>
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
+                                    Кирилл Матросов
+                                </a>
+                            </h4>
+                            <div class="team__desc">
+                                <div class="team__app">Дизайнер</div>
+                                <div class="team__subtitle">
+                                    Разработал дизан
+                                    наушников beats solo 3.
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <div class="team__img">
+                                <img src="./img/content/mila.jpg" alt="mila" class="team__img-item">
+                            </div>
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
+                                    Мила Рыжкова
+                                </a>
+                            </h4>
+                            <div class="team__desc">
+                                <div class="team__app">PR, маркетинг</div>
+                                <div class="team__subtitle">
+                                    По всем вопросам сотрудничества 
+                                    и рекламы писать только Миле. 
+                                </div>
+                            </div>
+                        </li> 
+                    </ul>
+                </div>
+            </div>
+        </section>
         <section class="section reviews-section" id="reviews">
             <div class="container">
                 <h2 class="section__title">Отзывы</h2>
