--- a/index.html
+++ b/index.html
@@ -229,11 +229,12 @@
                             <div class="team__img">
                                 <img src="./img/content/boris.jpg" alt="boris" class="team__img-item">
                             </div>
-                            <h4 class="team__name">
-                                <a href="#" class="team__name-link">
-                                    Борис Федорович
-                                </a>
-                            </h4>
+                            <a href="#" class="team__link">
+                                <h4 class="team__name">Борис Федорович</h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
                             <div class="team__desc">
                                 <div class="team__app">Главный технолог</div>
                                 <div class="team__subtitle">
@@ -246,11 +247,12 @@
                             <div class="team__img">
                                 <img src="./img/content/alla.jpg" alt="alla" class="team__img-item">
                             </div>
-                            <h4 class="team__name">
-                                <a href="#" class="team__name-link">
-                                    Алла Иванова
-                                </a>
-                            </h4>
+                            <a href="#" class="team__link">
+                                <h4 class="team__name">Алла Иванова</h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
                             <div class="team__desc">
                                 <div class="team__app">Специалист по упаковке</div>
                                 <div class="team__subtitle">
@@ -263,12 +265,13 @@
                             <div class="team__img">
                                 <img src="./img/content/cyril.jpg" alt="cyril" class="team__img-item">
                             </div>
-                            <h4 class="team__name">
-                                <a href="#" class="team__name-link">
-                                    Кирилл Матросов
-                                </a>
-                            </h4>
-                            <div class="team__desc">
+                            <a href="#" class="team__link" id="open">
+                                <h4 class="team__name">Кирилл Матросов</h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
+                            <div class="team__desc" id="block">
                                 <div class="team__app">Дизайнер</div>
                                 <div class="team__subtitle">
                                     Разработал дизан
@@ -280,11 +283,14 @@
                             <div class="team__img">
                                 <img src="./img/content/mila.jpg" alt="mila" class="team__img-item">
                             </div>
-                            <h4 class="team__name">
-                                <a href="#" class="team__name-link">
+                            <a href="#" class="team__link">
+                                <h4 class="team__name">
                                     Мила Рыжкова
-                                </a>
-                            </h4>
+                                </h4>
+                                <svg class="team__link-img">
+                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
+                                </svg>
+                            </a>
                             <div class="team__desc">
                                 <div class="team__app">PR, маркетинг</div>
                                 <div class="team__subtitle">
