--- a/index.html
+++ b/index.html
@@ -370,12 +370,11 @@
                             <div class="team__img">
                                 <img src="./img/content/boris.jpg" alt="boris" class="team__img-item">
                             </div>
-                            <a href="#" class="team__link">
-                                <h4 class="team__name">Борис Федорович</h4>
-                                <svg class="team__link-img">
-                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
-                                </svg>
-                            </a>
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
+                                    Борис Федорович
+                                </a>
+                            </h4>
                             <div class="team__desc">
                                 <div class="team__app">Главный технолог</div>
                                 <div class="team__subtitle">
@@ -388,12 +387,11 @@
                             <div class="team__img">
                                 <img src="./img/content/alla.jpg" alt="alla" class="team__img-item">
                             </div>
-                            <a href="#" class="team__link">
-                                <h4 class="team__name">Алла Иванова</h4>
-                                <svg class="team__link-img">
-                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
-                                </svg>
-                            </a>
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
+                                    Алла Иванова
+                                </a>
+                            </h4>
                             <div class="team__desc">
                                 <div class="team__app">Специалист по упаковке</div>
                                 <div class="team__subtitle">
@@ -406,13 +404,12 @@
                             <div class="team__img">
                                 <img src="./img/content/cyril.jpg" alt="cyril" class="team__img-item">
                             </div>
-                            <a href="#" class="team__link" id="open">
-                                <h4 class="team__name">Кирилл Матросов</h4>
-                                <svg class="team__link-img">
-                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
-                                </svg>
-                            </a>
-                            <div class="team__desc" id="block">
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
+                                    Кирилл Матросов
+                                </a>
+                            </h4>
+                            <div class="team__desc">
                                 <div class="team__app">Дизайнер</div>
                                 <div class="team__subtitle">
                                     Разработал дизан
@@ -424,14 +421,11 @@
                             <div class="team__img">
                                 <img src="./img/content/mila.jpg" alt="mila" class="team__img-item">
                             </div>
-                            <a href="#" class="team__link">
-                                <h4 class="team__name">
+                            <h4 class="team__name">
+                                <a href="#" class="team__name-link">
                                     Мила Рыжкова
-                                </h4>
-                                <svg class="team__link-img">
-                                    <use xlink:href="./img/icons/sprite.svg#red_poly"></use>
-                                </svg>
-                            </a>
+                                </a>
+                            </h4>
                             <div class="team__desc">
                                 <div class="team__app">PR, маркетинг</div>
                                 <div class="team__subtitle">
